--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "nwidart/laravel-modules": "^7.2",
         "prettus/l5-repository": "^2.6",
         "spatie/laravel-permission": "^3.16",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
