--- a/.env.example
+++ b/.env.example
@@ -48,7 +48,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=
-JWT_TTL=
+JWT_TTL=3600
 
 ADMIN_SECRET_KEY_RESET_PASSWORD=
 
